kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stanovanja
spec:
  selector:
    app: stanovanja
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
